--- a/World-Popn-Errors-ME.Rmd
+++ b/World-Popn-Errors-ME.Rmd
@@ -1,6 +1,6 @@
 ---
 title: 'Exercise World Population - Fixing Errors'
-author: "Ty"
+author: "Monica Eusebio"
 date: "`r format(Sys.time(), '%a %d %b %Y (%H:%M:%S)')`"
 output:
   html_document:
